monitoring/prometheus/manifests/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  name: grafana
  namespace: monitoring
spec:
  rules:
  - host: grafana.skj.dev
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - grafana.skj.dev
    secretName: grafana-skj-dev-cert
