monitoring/prometheus/manifests/prometheus-k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  name: prometheus
  namespace: monitoring
spec:
  rules:
  - host: prometheus.skj.dev
    http:
      paths:
      - backend:
          service:
            name: prometheus-k8s
            port:
              name: web
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - prometheus.skj.dev
    secretName: prometheus-skj-dev-cert
